rust/crates/rax-nmea/src/sentence/snapshots/rax_nmea__sentence__gbs__tests__1.snap
---
source: crates/rax-nmea/src/sentence/gbs.rs
expression: gbs
---
{
  "time": "12:50:27",
  "err_lat": 23.43,
  "err_lon": 13.91,
  "err_alt": 34.01,
  "svid": null,
  "prob": null,
  "bias": null,
  "std_dev": null,
  "system_id": null,
  "signal_id": null
}
