rust/crates/rax-nmea/src/sentence/snapshots/rax_nmea__sentence__gbs__tests__2.snap
---
source: crates/rax-nmea/src/sentence/gbs.rs
expression: gbs
---
{
  "time": "23:54:58",
  "err_lat": 1.4,
  "err_lon": 1.3,
  "err_alt": 3.1,
  "svid": 3,
  "prob": null,
  "bias": -21.4,
  "std_dev": 3.8,
  "system_id": "GPS",
  "signal_id": 0
}
